Closed Bug 805606 Opened 12 years ago Closed 12 years ago

nsXBLDocumentInfo.cpp:267:12: warning: unused variable 'rv' [-Wunused-variable]

Categories

(Core :: XBL, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

I'm trying to mark /content/xbl/src as FAIL_ON_WARNINGS, and it looks like bug 797821 just introduced a warning by removing the last usage of a nsresult value in opt builds.
{
content/xbl/src/nsXBLDocumentInfo.cpp:267:12: error: unused variable 'rv' [-Werror,-Wunused-variable]
}
triggered by the 'rv' usage-removal in the first chunk in this cset:
 https://hg.mozilla.org/integration/mozilla-inbound/rev/01a59c65c8b8

The variable just wants to be DebugOnly now, I think.
Component: Canvas: WebGL → XBL
Blocks: 805607
Attached patch fixSplinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #675280 - Flags: review?(Ms2ger)
Attachment #675280 - Flags: review?(Ms2ger) → review+
https://hg.mozilla.org/mozilla-central/rev/d7ab11d4f000
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: