Bug 805606: Add DebugOnly annotation to fix build warning in nsXBLDocumentInfo.cpp. r=Ms2ger